RESTCallout/src/objects/Integration_Output__c.object
<CustomObject>
    <label>Integration Output</label>
    <nameField>
        <label>Integration Output Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Outputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>External_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Conversion_Custom__c</fullName>
        <label>Field Conversion Custom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Conversion__c</fullName>
        <label>Field Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Integration_Conversion_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Integration_Field_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Header_Variable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Header Variable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Definition__c</fullName>
        <label>Integration Definition</label>
        <referenceTo>Integration_Definition__c</referenceTo>
        <relationshipLabel>Integration Outputs</relationshipLabel>
        <relationshipName>Integration_Outputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Custom_Field_Conversion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsPickVal(Field_Conversion__c,'Custom'), Len(Field_Conversion_Custom__c) = 0)</errorConditionFormula>
        <errorMessage>If you select Custom for he Field Conversion then please specify the class name for the field conversion.</errorMessage>
    </validationRules>
</CustomObject>